update vacancy views